[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "micktrace"
version = "1.0.0"
description = "The world's most advanced Python logging library - async-native, structured, zero-config, library-first design"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ajay Agrawal", email = "ajay@micktrace.dev"}
]
maintainers = [
    {name = "Ajay Agrawal", email = "ajay@micktrace.dev"}
]
keywords = [
    "logging", 
    "async", 
    "structured", 
    "observability", 
    "tracing", 
    "performance", 
    "library-first",
    "zero-config"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Topic :: Software Development :: Debuggers",
    "Typing :: Typed"
]
dependencies = [
    "typing-extensions>=4.0.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "black>=22.0",
    "isort>=5.10",
    "mypy>=1.0",
    "flake8>=5.0",
    "pre-commit>=2.20",
    "tox>=4.0"
]
cloud = [
    "boto3>=1.26.0",
    "azure-storage-blob>=12.14.0",
    "google-cloud-logging>=3.4.0",
    "elasticsearch>=8.0.0"
]
performance = [
    "orjson>=3.8.0",
    "uvloop>=0.17.0;sys_platform!='win32'",
    "msgpack>=1.0.0"
]
all = ["micktrace[dev,cloud,performance]"]

[project.urls]
Homepage = "https://github.com/ajaycodes/micktrace"
Documentation = "https://micktrace.readthedocs.io"
Repository = "https://github.com/ajaycodes/micktrace"
"Bug Tracker" = "https://github.com/ajaycodes/micktrace/issues"

[project.scripts]
micktrace = "micktrace.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
micktrace = ["py.typed", "*.pyi"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["micktrace"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config", 
    "--cov=micktrace",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml"
]
markers = [
    "slow: marks tests as slow (deselect with '-m "not slow"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance tests"
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/micktrace"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*Protocol\):",
    "@(abc\.)?abstractmethod"
]
