[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "micktrace"
version = "1.0.0"
description = "The world's most advanced Python logging library - async-native, structured, zero-config, library-first design"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ajay Agrawal", email = "ajay@micktrace.dev"}
]
maintainers = [
    {name = "Ajay Agrawal", email = "ajay@micktrace.dev"}
]
keywords = [
    "logging", 
    "async", 
    "structured", 
    "observability", 
    "tracing", 
    "performance",
    "library-first",
    "zero-config",
    "context",
    "json",
    "logfmt"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Topic :: Software Development :: Debuggers",
    "Typing :: Typed",
    "Environment :: Console",
    "Framework :: AsyncIO"
]
dependencies = [
    "aioboto3>=11.3.0",
    "botocore>=1.31.62",
    "azure-monitor-ingestion>=1.0.0b5",
    "azure-core>=1.29.5",
    "google-cloud-logging>=3.8.0",
    "typing-extensions>=4.0.0;python_version<'3.11'"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "isort>=5.0"
]
performance = [
    "orjson>=3.8.0",
    "msgpack>=1.0.0"
]
rich = [
    "rich>=13.0.0"
]
all = ["micktrace[dev,performance,rich]"]

[project.urls]
Homepage = "https://github.com/ajaycodes/micktrace"
Repository = "https://github.com/ajaycodes/micktrace"
Documentation = "https://github.com/ajaycodes/micktrace#readme"
Issues = "https://github.com/ajaycodes/micktrace/issues"
Changelog = "https://github.com/ajaycodes/micktrace/blob/main/CHANGELOG.md"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
micktrace = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
